# simple-SNMP-template

./: .gitignore  AGENTS.md  AI_POLICY.md  PROCESS_TRACKING.md  README.md  TESTING.md  github_grader.py  project-template-config.json  pyproject.toml  pytest.ini  run_tests.py
.codex/: config.toml
.github/classroom/: autograding-simple.json  autograding.json
.github/workflows/: classroom.yml
docs/: FORENSICS_GUIDE.md  agent.md  index.md  manager.md  protocol.md
template/: snmp_agent.py  snmp_manager.py  snmp_protocol.py
tests/: conftest.py  conftest_json_report.py  test_capture_git_ops.py  test_capture_integration.py  test_capture_metadata.py  test_codex_ingest.py  test_public_snmp_protocol.py
tests/_capture/: __init__.py  auth.py  capture.py  codex_ingest.py  git_ops.py  metadata.py  watchdog.py
tools/: INTEGRITY_HASHES.txt  my_commits.py  validate_student_repo.py  verify_integrity.py
